# apollo

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  LICENSE-template.txt  LICENSE.txt  README.md  basic-usage.html  build_information.hpp.cmake_in  building.html  classes.html  converter-advanced.html  converter-basics.html  functions.html  genindex.html  get-deps.sh  index.html  main.cpp  objects.inv  search.html  searchindex.js  sugar.html  utilities.html
_sources/: basic-usage.txt  building.txt  converter-advanced.txt  converter-basics.txt  functions.txt  sugar.txt
cmake/Modules/: FindApollo.cmake  FindLua.cmake
doc/: CMakeLists.txt  Makefile  basic-usage.rst  building.rst  classes.rst  conf.py  converter-advanced.rst  converter-basics.rst  converters.rst  functions.rst  git_version.in  index.rst  make.bat  styleguide.md  sugar.rst  utilities.rst
doc/examples/: basic-class.cpp  basic-create_table.cpp  basic-push-from_stack.cpp  basic-push-to.cpp  raw_function.cpp
include/apollo/: builtin_types.hpp  class.hpp  class_utility.hpp  closing_lstate.hpp  closing_state.hpp  config.hpp  converters.hpp  converters_fwd.hpp  create_class.hpp  create_table.hpp  ctor_wrapper.hpp  default_argument.hpp  emplace_ctor.hpp  error.hpp  function.hpp  function_primitives.hpp  gc.hpp  implicit_ctor.hpp  lapi.hpp  lua_include.hpp  make_function.hpp  operator.hpp  overload.hpp  property.hpp  raw_function.hpp  reference.hpp  smart_ptr.hpp  stack_balance.hpp  to_raw_function.hpp  typeid.hpp  ward_ptr.hpp  wstring.hpp
include/apollo/detail/: base_traits.hpp  clang_stdlib_config.hpp  class_info.hpp  for_each_type.hpp  function_template.hpp  instance_holder.hpp  integer_seq.hpp  light_key.hpp  lua_state.hpp  meta_util.hpp  ref_binder.hpp  signature.hpp  smart_ptr.hpp  variadic_pass.hpp
src/: CMakeLists.txt  builtin_types.cpp  class.cpp  class_info.cpp  config.hpp  converters.cpp  converters.hpp  error.cpp  error.hpp  function.cpp  function.hpp  gc.hpp  lapi.cpp  lua51compat.cpp  main.cpp  overload.cpp  reference.cpp  stack_balance.cpp  typeid.cpp  wstring.cpp
src/detail/: function_template.hpp
test/: CMakeLists.txt  benchmark.cpp  test_call_by_ref.cpp  test_class_utility.cpp  test_create_class.cpp  test_create_table.cpp  test_default_argument.cpp  test_ex_filesystem.cpp  test_function_converters.cpp  test_implicit_ctor.cpp  test_lua_utils.cpp  test_object_converters.cpp  test_overloadset.cpp  test_prefix.hpp  test_property.cpp  test_reference.cpp  test_simple_converters.cpp  test_suffix.hpp  test_typeid.cpp  test_ward_ptr.cpp  test_wstring.cpp  testutil.cpp  testutil.hpp
